# quik

./: CMakeLists.txt  COPYING  Readme.md  build-stdlib.sh  install-stdlib.sh  issues.txt  out  test-all.sh  test-errors.sh  test.py  test.sh  test_all_x64.sh  test_i386.sh
aasm/: aasm.cpp  aasm.hh  aasm_func.cpp  aasm_func.hh  build.cpp  build.hh
aasm/test/: main.cpp
backend.old/compiler/: types.hh  utils.hh
backend.old/ltac/: ltac_build.cpp  ltac_file.cpp
compiler/: asmx86.cpp  asmx86.hh  compiler.cpp  compiler.hh  config.hh  main.cpp  types.hh  utils.cpp
compiler/arm7/: arm7_funcs.cpp  asm_arm7.cpp  asm_arm7.hh
compiler/armv7/: armv7.cpp  armv7.hh  armv7_flow.cpp  armv7_funcs.cpp  armv7_vars.cpp
compiler/base/: asm_base.cpp  asm_base.hh
compiler/ltac/: ltac_gen.hh  ltac_x86_64.cpp
compiler/x64/: asm_x64.cpp  asm_x64.hh  x64_array.cpp  x64_flow.cpp  x64_funcs.cpp  x64_vars.cpp
compiler/x86/: asmx86.cpp  asmx86.hh  x86_array.cpp  x86_builtin.cpp  x86_flow.cpp  x86_funcs.cpp  x86_struct.cpp  x86_utils.cpp  x86_vars.cpp
config/: cc_config.hh  config.hh
examples/: array1.qk  avx_int.qk  avx_int2.qk  factorial.qk  float.qk  hello-world.qk  int_math.qk  sse_int.qk  str_chars.qk
examples/armv7/: hello-world.asm  int_math.asm
examples/arrays/: func1.qk  int_arr2.qk
examples/asm-32/: array1.asm  array_func.asm  factorial.asm  hello-world.asm  int_math.asm  str_chars.asm
examples/asm-64/: array1.asm  array_func.asm  avx_int.asm  avx_int2.asm  factorial.asm  float.asm  hello-world.asm  int_math.asm  sse_int.asm  str_chars.asm
examples/cmp/: short_cmp.qk
examples/errors/: no_if1.qk
examples/funcs/: func1.qk
examples/lib/: lib1.qk
examples/optimize/: funcs.qk
examples/project-euler/: prob1.qk
examples/string/: loop.qk
examples/strings/: str1.qk  str3.qk
examples/vars/: char1.qk  dec.qk
lex/: lex.cpp  lex.hh  strutils.cpp
lex/test/: main.cpp  test.cpp  test.hh
ltac/: build.cpp  build.hh  ltac.cpp  ltac.hh  ltac_build.cpp  ltac_build.hh  ltac_file.cpp  ltac_file.hh  ltac_flow.cpp  ltac_func.cpp  ltac_func.hh  ltac_funcs.cpp  ltac_vars.cpp
ltac.old/: ltac_build.cpp  ltac_vars.cpp
ltac.old/test/: main.cpp
ltac/test/: main.cpp
old/specs.old/: multi-return.qk
parser/: analyzer.cpp  analyzer.hh  ast.cpp  ast.hh  build.cpp  build.hh  conditional.cpp  data.cpp  debug.cpp  funcs.cpp  lex.cpp  lex.cpp~  lex.hh  loop.cpp  optimize.cpp  optimize.hh  parse.cpp  parse.hh  strutils.cpp  strutils.hh  syntax.cpp  syntax.hh  types.hh  utils.cpp  vars.cpp
parser/ltac/: ltac.cpp  ltac.hh  ltac_array.cpp  ltac_build.cpp  ltac_build.hh  ltac_cmp.cpp  ltac_flow.cpp  ltac_func.cpp  ltac_vars.cpp  printer.cpp
parser/optimization/: funcs.cpp  optimize.hh
parser/test/: lex_test.cpp  ltac_test.cpp  main.cpp  parser_test.cpp
specs/: array.qk  array1.qk  cmp1.qk  extern.qk  for1.qk  for2.qk  func_call.qk  func_ret3.qk  funcs1.qk  hello-world.qk  hello-world.upl  loop.qk  math1.qk  multi-dec.qk  parallel1.qk  pointers.qk  prime-factor.qk  vars1.qk  while.qk  while1.qk
specs/assembly/: array.asm  extern.asm  func_call.asm  hello-world.asm  prime-factor.asm  while.asm
specs/loop/: infinite.qk  loop2.qk  while2.qk
specs/non-working/: Readme.md  func_call.qk
specs/operator/: add.qk  assign.qk  sub.qk
specs/struct/: struct1.qk
specs/types/: bool.qk  bool1.qk  byte.qk  char.qk  double.qk  float.qk  int.qk  short.qk  types1.qk  uint.qk  ushort.qk
stdlib/: io.qk  stdio.c  test.c  test.qk
test/: arr_acc1.qk  byte1.qk  cmp1.qk  cmp1_4.qk  cmp2_1.qk  cmp2_3.qk  cmp_func.qk  cmp_funcs.qk  cmp_math.qk  cmp_op.qk  cmp_short2.qk  float1.qk  float_arr1.qk  inc1.qk  int1.qk  int2.qk  int_arr1.qk  int_arr2.qk  int_arr3.qk  int_arr_pass1.qk  int_arr_pass2.qk  int_chain1.qk  int_func.qk  lex-test  lex-test2  lex-test3  loop1.qk  loop2.qk  multi-arg1.qk  neg1.qk  ret1.qk  ret2.qk  str1.qk  str2.qk  struct1.qk  struct2.qk  vfloat1.qk  vfloat2.qk  vint1.qk  while1.qk  (+2 more)
(+149 files in other folders)
